 * Disable the cd-text fields if cd-text writing is disabled.
 * New Alsa audio output plugin.
 * If a DVD project does not fill up the DVD completely do not close the DVD in automatic 
   multisession mode.
 * Fixed problems with filenames ending in backslashes.
 * Fixed problems with special characters like umlauts on UTF systems (this does however not fix the
   verification issues)

0.12.8
======
 * Load index0 value in audio project.
 * Ignore case in cue files.
 * The "eject media" setting was not used properly in some situations (thanks to simon@munton.demon.co.uk for the patch)
 * Fixed a bug in the mp3 decoder which caused it to miss some perfectly valid mp3 files.

0.12.7
======
 * Fixed crash when refreshing the device list.
 * Fixed cancellation of adding files to a data project.
 * Fixed on-the-fly data project burning.	
 * Backported a warning about following links to folders (K3b cannot do that after the link has
   been added to the project).

0.12.6
======
 * Copy XA Form1 tracks always in TAO writing mode.
 * Support for media:/ urls.
 * No extra whitespace when renaming audio files in a data project anymore.
 * Fixed verification of multisession CDs (thanks to simon@munton.demon.co.uk)
 * Preserve directory access time in data projects when using the "backup" option.
 * Disable the "audio normalization" option in case the normalize program is not installed.

0.12.5
======
 * Fixed the progressbar in the file view
 * It is possible to add the "New Data DVD Project" button to the welcome window again.
 * Fixed problems with unreadable items when using a non-standard color scheme
 * Properly set the permissions on cdrecord versions >= 2.01.01a02
 * Fixed the "Disabled start button in Copy dialog" bug.
 * Little window layout fix in K3bSetup2.
 * Always use sector size 2048 when only creating an image in CD Copy. This means extracted
   iso images from CDs with non-Mode1 tracks are useable again.