@@ -10,6 +10,7 @@
  * Fixed problems with filenames ending in backslashes.
  * Fixed problems with special characters like umlauts on UTF systems (this does however not fix the
    verification issues)
+ * Automatically use a newly installed version of an external application at the next K3b start.
 
 0.12.8
 ======
